fix style in jsx

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,14 @@
 
     <div id="root"></div>
 
-    <!-- <script src="../src/js/clock.js"></script> -->
-    <script src="../dist/main.js"></script>
-    <!-- <script src="../src/js/base.js"></script> -->
+    
+    <!-- <script src="../src/js/clock.js"></script>
+    <script src="../src/js/base.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="../src/lib/bootstrap/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/504c209ddd.js" crossorigin="anonymous"></script>
+    <script src="../dist/main.js"></script>
 </body>
 
 </html>
